ported qeditor to ktexteditor interface

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-20  Roberto Raggi  <raggi@cli.di.unipi.it>
+	* Ported qeditor to ktexteditor interface
+	* Fixed text insertion in abbreviation part
+	
 2002-05-20  Bernd Gehrmann  <bernd@mail.berlios.de>
 
 	* Make sure headers are parsed before sources
