--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-20  Matthias Hölzer-Klüpfel <mhk@kde.org>
+	* Welcome in the 2000's: the Tools menu config
+	  now uses ksycoca...
+
 2002-05-20  Harald Fernengel  <harry@kdevelop.org>
 	* Outputviews: Uses bright font colors if widget background is dark
 
