--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2002-05-25  Roberto Raggi <raggi@cli.di.unipi.it>
 	* qeditor: Added code folding support
+	* qeditor: Added emacs-style indent mode	
 	
 2002-05-25  Harald Fernengel <harry@kdevelop.org>
 	* use KApplicationTree in tools-part to avoid code duplication
