--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-05-29  Harald Fernengel <harry@kdevelop.org>
+        * perforce part: implemented edit and revert
+        * perforce part: added submit dialog
+
 2002-05-28  Roberto Raggi <raggi@cli.di.unipi.it>
 	* qeditor: added find/replace dialogs
 
