--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-05-31  Bernd Gehrmann  <bernd@mail.berlios.de>
+
+	* kdevprj2kdevelop for converting project files
+	  and creating file lists
+
 2002-05-30  Bernd Gehrmann  <bernd@mail.berlios.de>
 
 	* In class view, arrange classes in folders if they
