Applied Kuba's patches for indentation, editor settings and compilation fixes for gcc-3. Snuck in a fix for finding dependency files for ctags (.P .Po .Plo)

--- a/AUTHORS
+++ b/AUTHORS
@@ -97,6 +97,7 @@ KDevelop 1.4, 2.0: Michel Stol (aka Wimpie) <f1r3f0x@hotmail.com>
 -Michael Braun <MichaelBraun@oaktech.com>
 -Adam Dingle <adam@medovina.org>
 -Tim Brodie <tbrodie@displayworksinc.com>
+-Kuba Ober <kuba@mareimbrium.org>
 
 ****Gnome Template Application****
 
