--- a/ChangeLog
+++ b/ChangeLog
@@ -1,21 +1,26 @@
+2002-06-04  Roland Krause  <roland@ca.wai.com>
+    * Applied Kuba's patches for indentation, editor settings and
+      compilation fixes for gcc-3
+    * Snuck in a fix for finding dependency files for ctags (.P .Po .Plo)
+2002-06-03  Kuba Ober <kuba@mareimbrium.org>
+    * indentation works in a usaeable way
+      indent selection is still on TODO list
+    * made Options->Editor... dialog into a horizontal layout to accommodate
+      future additions without problems on lower resolution screens
+    * compilation fixes for GCC 3.1
 2002-05-30  Harald Fernengel <harry@kdevelop.org>
         * gcc 3.1 compile fix in tokenizer.l
-
 2002-05-28  F@lk Brettschneider <falk@kdevelop.org>
         * stepped to version 2.1.2 (preparing for KDE-3.0.2)
-
 2002-05-19  F@lk Brettschneider <falk@kdevelop.org>
 	* applied patch of Marcus Gruendler which workarounds changed (maybe buggy) Qt behaviour on text output in output tool-view
 	  (reviewed by Harald Fernengel)
-
 2002-04-27  August Hörandl  <august.hoerandl@gmx.at>
 	* kdevelop/cclassview.cpp: fixed wrong path for new file
 	  reviewed by Roland Krause
-
 2002-04-26  Roland Krause  <roland@ca.wai.com>
 	* fixed a crash when attempting to look at parent classes in the 
          class viewer. reviewed by HarryF
-
 2002-04-25  F@lk Brettschneider <falk@kdevelop.org>
         * applied framestack patch, reviewed by Harald
 	
