--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+2002-06-06  August Hörandl  <august.hoerandl@gmx.at>
+	* fix typo: kbasedoc.h in kdemdi.tar.gz
 2002-06-04  Roland Krause  <roland@ca.wai.com>
     * Applied a fix to the coutputwidget. This is mine and Harry's but not
       Kuba's solution. The coutputwidget will still use RichText so we can 
