*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,6 @@
 2002-06-07  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
         * add default support to DomUtil
-        * doctreeview: add configuration for KDElibs
+        * doctreeview: add configuration for Qt/KDE libs
         * cppsupport: add configuration for file templates
         
 2002-05-31  Bernd Gehrmann  <bernd@mail.berlios.de>
