--- a/TODO
+++ b/TODO
@@ -4,6 +4,12 @@ High priority tasks!
 1. Fixing major/annoying bugs
 -----------------------------
 
+* konsole part cd's when selecting a file, but doesn't when selecting a dir
+  desired: a menu option to "cd"to that directory
+  
+* cvs commands don't work when the message contains those unfortunate characters
+  desired: whatever you type in message box it should work
+
 2. KDevelop 2 compatibility
 ---------------------------
 
