--- a/TODO
+++ b/TODO
@@ -4,8 +4,10 @@ High priority tasks!
 1. Fixing major/annoying bugs
 -----------------------------
 
+* crashes when quit with 'close window' button
+
 * konsole part cd's when selecting a file, but doesn't when selecting a dir
-  desired: a menu option to "cd"to that directory
+  desired: a menu option to "cd" to that directory
   
 * cvs commands don't work when the message contains those unfortunate characters
   desired: whatever you type in message box it should work
