--- a/TODO
+++ b/TODO
@@ -6,8 +6,10 @@ High priority tasks!
 
 * crashes when quit with 'close window' button
 
-* konsole part cd's when selecting a file, but doesn't when selecting a dir
-  desired: a menu option to "cd" to that directory
+* konsole part:
+  * cd's when selecting a file, but doesn't when selecting a dir
+    desired: a menu option to "cd" to that directory
+  * CTRL-C doesn't work
   
 * cvs commands don't work when the message contains those unfortunate characters
   desired: whatever you type in message box it should work
