--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-06-09  Matthias Hölzer-Klüpfel <mhk@kde.org>
+	* partcontroller now compares inodes instead of URLs 
+	  when the files are local
+
 2002-06-09  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
         * autoproject: get rid of symlinks in project directory
         * classview: consider source dirs at any level, rather than 2 levels deep
