--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-06-09  John Firebaugh <jfirebaugh@kde.org>
+        * debugging breakpoints now work much more sensibly
+        * can use kate icon-border menu to enable/disable
+        * properly move execution point
+
 2002-06-09  Matthias Hölzer-Klüpfel <mhk@kde.org>
 	* partcontroller now compares inodes instead of URLs 
 	  when the files are local
