*** empty log message ***

--- a/AUTHORS
+++ b/AUTHORS
@@ -98,6 +98,7 @@ KDevelop 1.4, 2.0: Michel Stol (aka Wimpie) <f1r3f0x@hotmail.com>
 -Adam Dingle <adam@medovina.org>
 -Tim Brodie <tbrodie@displayworksinc.com>
 -Kuba Ober <kuba@mareimbrium.org>
+-Marcus Gruendler <gruendler@tamalin.de>
 
 ****Gnome Template Application****
 
