* Set waitCursor while ctags is running * cvs log message quoting fix

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,8 @@
 2002-06-12  Bernd Gehrmann  <bernd@mail.berlios.de>
 
 	* Compiling of single files in auto and custom project parts
+	* Set waitCursor while ctags is running
+	* cvs log message quoting fix
 
 2002-06-11  John Firebaugh  <jfirebaugh@kde.org>
         Debugger bugfixes:
