--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
-2002-06-03  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
+2002-06-13  Eray Ozkural (exa) <erayo@cs.bilkent.edu.tr>
         * classview: fix hierarchical view (It showed only a single
           level of directories)
         * cppsupport: add file templates for .cpp and .h
+        * hack old kwrite-part a little to bring it up to date
+          (not finished)
 
 2002-06-12  Matthias Hölzer-Klüpfel <mhk@kde.org>
 
