--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
         * cppsupport: add file templates for .cpp and .h
         * hack old kwrite-part a little to bring it up to date
           (not finished)
+        * Add TODO items suggested by Falk
 
 2002-06-12  Matthias Hölzer-Klüpfel <mhk@kde.org>
 
